Update upstream more and add debug logging for null hitboxes